fix: docker compose expose ports & add readme compose example

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   tplink-api:
     container_name: tplink-api
     build: .
+    ports:
+      - "5000:5000"
     environment:
       TP_LINK_IP: 192.168.1.1
       TP_LINK_USERNAME: admin
